# ginkgo

./: .gitlab-ci.yml  BENCHMARKING.md  CMakeLists.txt
.github/: bot-pr-format-base.sh
benchmark/: CMakeLists.txt  run_all_benchmarks.sh
benchmark/conversions/: conversions.cpp
benchmark/matrix_generator/: matrix_generator.cpp
benchmark/matrix_statistics/: matrix_statistics.cpp
benchmark/preconditioner/: preconditioner.cpp
benchmark/solver/: CMakeLists.txt  solver-mpi.cpp  solver.cpp
benchmark/spmv/: CMakeLists.txt  spmv-mpi.cpp  spmv.cpp
benchmark/utils/: cuda_linops.hpp  formats.hpp  general.hpp  hip_linops.hip.hpp  loggers.hpp  overhead_linop.hpp  preconditioners.hpp
cmake/: build_helpers.cmake  create_test.cmake  get_info.cmake
common/components/: atomic.hpp.inc  intrinsics.hpp.inc  merging.hpp.inc  segment_scan.hpp.inc
common/factorization/: par_ict_spgeam_kernels.hpp.inc  par_ict_sweep_kernels.hpp.inc  par_ilu_kernels.hpp.inc
common/matrix/: coo_kernels.hpp.inc  csr_kernels.hpp.inc  dense_kernels.hpp.inc  hybrid_kernels.hpp.inc
common/preconditioner/: isai_kernels.hpp.inc
common/solver/: gmres_kernels.hpp.inc
core/: CMakeLists.txt
core/base/: array.cpp  extended_float.hpp  index_set.cpp
core/device_hooks/: CMakeLists.txt  common_kernels.inc.cpp  cuda_hooks.cpp  dpcpp_hooks.cpp  hip_hooks.cpp  mpi_hooks.cpp
core/factorization/: par_ict.cpp  par_ict_kernels.hpp
core/matrix/: coo.cpp  csr.cpp  csr_kernels.hpp  dense.cpp  dense_kernels.hpp  diagonal.cpp  ell.cpp  hybrid.cpp  sellp.cpp  sparsity_csr.cpp
core/multigrid/: amgx_pgm.cpp  amgx_pgm_kernels.hpp
core/preconditioner/: isai.cpp
core/solver/: bicg.cpp  bicgstab.cpp  cg.cpp  cgs.cpp  fcg.cpp  gmres.cpp  idr.cpp  ir.cpp  lower_trs.cpp  multigrid.cpp  upper_trs.cpp
core/test/: utils.hpp
cuda/: CMakeLists.txt
cuda/base/: cusparse_bindings.hpp  executor.cpp
cuda/components/: intrinsics.cuh
cuda/factorization/: par_ict_kernels.cu  par_ilu_kernels.cu
dpcpp/: CMakeLists.txt
examples/: CMakeLists.txt
examples/mfem_error/: CMakeLists.txt  mfem_error.cpp
examples/mfem_error/data/: A_o2_beam.mtx  b_o2_beam.mtx  x0.mtx
hip/: CMakeLists.txt
mpi/: get_info.cmake
mpi/test/matrix/: CMakeLists.txt  distributed_coo.cpp  distributed_csr.cpp  distributed_dense.cpp
mpi/test/matrix/cuda/: distributed_coo.cpp  distributed_csr.cpp  distributed_dense.cpp
omp/: CMakeLists.txt
reference/: CMakeLists.txt
(+154 files in other folders)
