add_executable(solver solver.cpp)
target_link_libraries(solver ginkgo gflags rapidjson)
if (GINKGO_BUILD_CUDA)
    ginkgo_benchmark_cusp_linops(solver)
endif()
if (GINKGO_BUILD_HIP)
    ginkgo_benchmark_hipsp_linops(solver)
endif()
if (GINKGO_BUILD_MPI)
    add_executable(solver-mpi solver-mpi.cpp)
    target_link_libraries(solver-mpi ginkgo gflags rapidjson)
    target_include_directories(solver-mpi SYSTEM PRIVATE ${MPI_INCLUDE_PATH})
    target_link_libraries(solver-mpi ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES})
endif()
