add_executable(spmv spmv.cpp)
target_link_libraries(spmv ginkgo gflags rapidjson)
if (GINKGO_BUILD_CUDA)
    ginkgo_benchmark_cusp_linops(spmv)
endif()
if (GINKGO_BUILD_HIP)
    ginkgo_benchmark_hipsp_linops(spmv)
endif()
if (GINKGO_BUILD_MPI)
    target_include_directories(spmv SYSTEM PRIVATE ${MPI_INCLUDE_PATH})
    target_link_libraries(spmv ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES})
endif()
